src/core/tests/data/invalid/same_names/deep/spcs/spc.rsk

[SPC-same]
text = "this is the replication"
